--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -154,5 +154,5 @@
     \ce{C-H}-Bindungslänge in TMA                 & \SI{1.113}{\angstrom}  & \cite{haynes_crc_2011} S.9-46 \\
     \hline
   \end{tabularx}
-
+\todoline{Linearen Ausdehnungskoeffizienten rausnehmen, wenn er nirgends benutzt wird. Am Besten nochmal nachfragen}
 \end{table}
