--- a/bibliography.tex
+++ b/bibliography.tex
@@ -12,5 +12,4 @@
 
 \bibliography{literature} %standard
 
-\todoline{dois und links überarbeiten, Patentnummern eintragen, Kramer: Beide Vornamen, Buda: doi!, biehl: ISBN/doi, dwivedi\_2010: doi/isbn, dwivedi\_2009-2: doi nicht verlinkt, gosalvez: doi!, lorenz: link, ylammi: doi nicht verlinkt, ritala: ISBN!, suntola patent: Patentnummer!, Voter: Adresse, seyama: doi nicht verlinkt, higashiwaki: doi nicht verlinkt}
-\todoline{doi-links fehlen -> url fehlt, ISBNs: gleiche Formatierung}
+\todoline{lorenz: link}
