--- a/contents.tex
+++ b/contents.tex
@@ -57,7 +57,6 @@
 
 \def\arraystretch{1.3}
 \begin{tabular}{lll}
-AFM       & Atomic Force Microscopy             & Rasterkraftmikroskopie                                     \\
 ALD       & Atomic Layer Deposition             & Atomlagenabscheidung                                       \\
 CFD       & Computational Fluid Dynamics        & Eine Methode zur Gasfluss/Simulation                       \\
 CVD       & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung                             \\
@@ -68,12 +67,10 @@ KMC       & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methode
 MMC       & Metropolis Monte Carlo              & Metropolis Monte Carlo-Methoden                            \\
 MD        & Molecular Dynamics                  & Molekulardynamik                                           \\
 MEAM      & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode                     \\
-MOSFET    & Metal Oxide Field Effect Transistor & Metalloxid-Feldeffekt-Transistor                           \\
-MPI       & Message Passing Interface           & Eine Kommunikationsschnittstelle                           \\
 PVD       & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung                         \\
 RAM       & Random-Access Memory                & Arbeitsspeicher                                            \\
 RDF       & Radial Distribution Function        & Radiale Verteilungsfunktion                                \\
-RMS       & Root Mean Square                    & Standardabweichung                                         \\
+RMS       & Root Mean Square                    & Standardabweichung, häufig für Rauheiten                   \\
 ReaxFF    & Reactive Force Fields               & Reaktive Kraftfelder                                       \\
 TMA       & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})                         \\
 NPT       & \multicolumn{2}{l}{Bezeichnung für das Isotherm-Isobare Ensemble}                                \\
@@ -94,9 +91,6 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   LMP
   GMR    & Giant Magnetoresistance & Riesenmagnetowiderstand                                             \\
   TMR
-  ISBN
-  ISBNs
-  NPH
   AMBER
   CHARMM
   EON
@@ -111,7 +105,6 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   CG     & Conjugated Gradients    & Konjugierte Gradienten                                              \\
   EU
   ACCELERATE
-  MOSFETs
   XXR, SI - latex table definitions
   Mathematische hyperref-Symbole: TE TMD RE
 \end{comment}
