--- a/literature.bib
+++ b/literature.bib
@@ -23,7 +23,7 @@
 	doi = {10.1149/1.3207582},
 	urldate = {2011-08-11},
 	booktitle = {{ECS} Transactions},
-	author = {Dwivedi, Vivek and Adomaitis, Raymond A.},
+	author = {Dwivedi, Vivek Hari and Adomaitis, Raymond A.},
 	year = {2009},
 	pages = {115--122},
 	file = {Dwivedi and Adomaitis - 2009 - Multiscale Simulation and Optimization of an Atomi.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/F6NI44SI/Dwivedi and Adomaitis - 2009 - Multiscale Simulation and Optimization of an Atomi.pdf:application/pdf}
@@ -37,7 +37,7 @@
 	abstract = {A multiscale simulator for alumina film growth inside a nanoporous material during an atomic layer deposition process is developed. The model combines a continuum description at the macroscopic level of precursor gas transport inside a nanopore during exposure to each of the two precursor species (trimethyaluminum and water) with a Monte Carlo simulation of the film growth on the microscopic scale. Simulation results are presented for both the Monte Carlo simulation and for the multiscale system, the latter illustrating how nonuniform deposition along the nanopore can occur when insufficient precursor exposure levels are used.},
 	booktitle = {American Control Conference, 2009. {ACC} '09.},
 	publisher = {{IEEE}},
-	author = {Dwivedi, V. and Adomaitis, R. A},
+	author = {Dwivedi, Vivek Hari and Adomaitis, Raymond A.},
 	month = jun,
 	year = {2009},
 	keywords = {Al2O3, alumina, alumina film growth, Amorphous materials, Atomic layer deposition, Chemical engineering, dielectric thin films, Educational institutions, Gases, Manufacturing, Microscopy, Monte Carlo methods, Monte Carlo simulation, multiscale modeling, nanoporous material, Nanoporous materials, nonuniform deposition, precursor gas transport, Sputtering, Thickness control},
@@ -102,7 +102,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	doi = {10.1016/0040-6090(95)08159-3},
 	number = {1-2},
 	journal = {Thin Solid Films},
-	author = {Ylilammi, M.},
+	author = {Ylilammi, Markku},
 	year = {1996},
 	pages = {124--130},
 	file = {ylilammi_tsf_1996.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/NR79MUS7/ylilammi_tsf_1996.pdf:application/pdf}
@@ -117,7 +117,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {10},
 	urldate = {2011-08-12},
 	journal = {Physical Review B},
-	author = {Gutierrez, Gonzalo and Johansson, Börje},
+	author = {Gutiérrez, Gonzalo and Johansson, Börje},
 	year = {2002},
 	pages = {104202},
 	file = {APS Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/P787SJJU/Gutierrez and Johansson - 2002 - Molecular dynamics study of structural properties .pdf:application/pdf;APS Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ZQ4MWNND/e104202.html:text/html}
@@ -137,7 +137,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	address = {Maryland, {USA}},
 	title = {A multiscale Model for an atomic layer deposition process},
 	school = {University of Maryland},
-	author = {Dwivedi, Vivek},
+	author = {Dwivedi, Vivek Hari},
 	year = {2010},
 	file = {Dwivedi_diss_2010.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/EREP796V/Dwivedi_diss_2010.pdf:application/pdf}
 }
@@ -215,8 +215,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	author = {Suntola, Tuomo and Antson, Jorma},
 	month = nov,
 	year = {1977},
-	note = {{US} Patent No. 4,058,430},
-	file = {Espacenet patent record:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/UNCKURVJ/1977 - Method for producing compound thin films:}
+	note = {{US} Patent No. 4,058,430}
 }
 
 @article{kim_energy_2011,
@@ -282,7 +281,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {7},
 	urldate = {2012-09-14},
 	journal = {Semiconductor Science and Technology},
-	author = {Elliott, Simon D},
+	author = {Elliott, Simon D.},
 	month = jul,
 	year = {2012},
 	pages = {074008},
@@ -298,7 +297,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {12},
 	urldate = {2012-08-07},
 	journal = {Physical Review B},
-	author = {Daw, M. S. and Baskes, M. I.},
+	author = {Daw, Murray. S. and Baskes, M. I.},
 	year = {1984},
 	pages = {6443--6453},
 	file = {p6443_1.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SR45TI95/p6443_1.pdf:application/pdf;p6443_1.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2HR5ZF38/p6443_1.pdf:application/pdf}
@@ -399,7 +398,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {10},
 	urldate = {2013-10-23},
 	journal = {International Journal of Hydrogen Energy},
-	author = {Russo, Michael F. and Li, Rong and Mench, Matthew and van Duin, Adri C.T.},
+	author = {Russo, Michael F. and Li, Rong and Mench, Matthew and van Duin, Adri C. T.},
 	month = may,
 	year = {2011},
 	pages = {5828--5835},
@@ -415,7 +414,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {1},
 	urldate = {2013-10-28},
 	journal = {Modelling and Simulation in Materials Science and Engineering},
-	author = {Narayanan, Badri and van Duin, Adri C T and Kappes, Branden B and Reimanis, Ivar E and Ciobanu, Cristian V},
+	author = {Narayanan, Badri and van Duin, Adri C. T. and Kappes, Branden B. and Reimanis, Ivar E. and Ciobanu, Cristian V.},
 	month = jan,
 	year = {2012},
 	pages = {015002},
@@ -548,7 +547,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {5},
 	urldate = {2014-06-24},
 	journal = {Computer-Aided Design},
-	author = {Cignoni, P and Montani, C and Scopigno, R},
+	author = {Cignoni, P. and Montani, C. and Scopigno, R.},
 	month = apr,
 	year = {1998},
 	keywords = {Delaunay triangulation, divide and conquer, uniform grids},
@@ -661,7 +660,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	doi = {10.1103/PhysRevB.33.7983},
 	number = {12},
 	journal = {Physical Review B},
-	author = {Foiles, S.M. and Baskes, M.I. and Daw, M. S.},
+	author = {Foiles, S. M. and Baskes, M. I. and Daw, Murray. S.},
 	month = jun,
 	year = {1986},
 	pages = {7983--7991},
@@ -781,7 +780,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {11},
 	urldate = {2014-09-25},
 	journal = {Philosophical Magazine},
-	author = {Mendelev, M.I. and Kramer, M.J. and Ott, R.T. and Sordelet, D.J. and Yagodin, D. and Popel, P.},
+	author = {Mendelev, M. I. and Kramer, M. J. and Ott, R.T. and Sordelet, D.J. and Yagodin, D. and Popel, P.},
 	month = apr,
 	year = {2009},
 	pages = {967--987},
@@ -1001,7 +1000,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	abstract = {We have measured the density of amorphous and microcrystalline silicon films using an optical method. The mass density decreases with increasing hydrogen content, consistent with a hydrogenated di-vacancy model that fits the data for amorphous silicon. Material produced by hot wire assisted chemical vapour deposition, with low hydrogen content, has a higher density and is structurally different from glow discharge material with hydrogen content around 10 at.\%. The lower density microcrystalline silicon seems to be porous.},
 	urldate = {2014-10-28},
 	journal = {Journal of Non-Crystalline Solids},
-	author = {Remeš, Z and Vaněček, M and Torres, P and Kroll, U and Mahan, A. H and Crandall, R. S},
+	author = {Remeš, Z. and Vaněček, M. and Torres, P. and Kroll, U. and Mahan, A. H. and Crandall, R. S.},
 	month = may,
 	year = {1998},
 	keywords = {Hydrogen contents, Mass density, Silicon layers},
@@ -1072,7 +1071,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {9},
 	urldate = {2014-11-04},
 	journal = {Journal of the American Ceramic Society},
-	author = {Dynys, F.w. and Halloran, J. W.},
+	author = {Dynys, F. W. and Halloran, J. W.},
 	month = sep,
 	year = {1982},
 	pages = {442--448},
@@ -1233,7 +1232,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	number = {10},
 	urldate = {2014-11-05},
 	journal = {Journal of Computational Chemistry},
-	author = {Brooks, B. R. and Brooks, C. L. and Mackerell, A. D. and Nilsson, L. and Petrella, R. J. and Roux, B. and Won, Y. and Archontis, G. and Bartels, C. and Boresch, S. and Caflisch, A. and Caves, L. and Cui, Q. and Dinner, A. R. and Feig, M. and Fischer, S. and Gao, J. and Hodoscek, M. and Im, W. and Kuczera, K. and Lazaridis, T. and Ma, J. and Ovchinnikov, V. and Paci, E. and Pastor, R. W. and Post, C. B. and Pu, J. Z. and Schaefer, M. and Tidor, B. and Venable, R. M. and Woodcock, H. L. and Wu, X. and Yang, W. and York, D. M. and Karplus, M.},
+	author = {Brooks, B. R. and Brooks, C.L. and Mackerell, A. D. and Nilsson, L. and Petrella, R. J. and Roux, B. and Won, Y. and Archontis, G. and Bartels, C. and Boresch, S. and Caflisch, A. and Caves, L. and Cui, Q. and Dinner, A. R. and Feig, M. and Fischer, S. and Gao, J. and Hodoscek, M. and Im, W. and Kuczera, K. and Lazaridis, T. and Ma, J. and Ovchinnikov, V. and Paci, E. and Pastor, R. W. and Post, C. B. and Pu, J. Z. and Schaefer, M. and Tidor, B. and Venable, R. M. and Woodcock, H. L. and Wu, X. and Yang, W. and York, D. M. and Karplus, M.},
 	month = jul,
 	year = {2009},
 	keywords = {biomolecular simulation, biophysical computation, {CHARMM} program, energy function, Molecular dynamics, molecular mechanics, molecular modeling},
@@ -1447,7 +1446,7 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6DVSPTBX/Thompson - 1968 - II. The energy spectrum of ejected atoms during th.pdf:application/pdf;Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/PQ8XBXBS/Thompson - 1968 - II. The energy spectrum of ejected atoms during th.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/MQ3QU866/14786436808227358.html:text/html;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/9VZVASBQ/14786436808227358.html:text/html}
 }
 
-@article{torre_study_2002,
+@article{dalla_torre_study_2002,
 	title = {Study of self-limiting oxidation of silicon nanoclusters by atomistic simulations},
 	volume = {92},
 	issn = {0021-8979, 1089-7550},
@@ -1457,7 +1456,7 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	number = {2},
 	urldate = {2014-11-10},
 	journal = {Journal of Applied Physics},
-	author = {Torre, J. Dalla and Bocquet, J.-L. and Limoge, Y. and Crocombette, J.-P. and Adam, E. and Martin, G. and Baron, T. and Rivallin, P. and Mur, P.},
+	author = {Dalla Torre, J. and Bocquet, J.-L. and Limoge, Y. and Crocombette, J.-P. and Adam, E. and Martin, G. and Baron, T. and Rivallin, P. and Mur, P.},
 	month = jul,
 	year = {2002},
 	keywords = {Bond formation, Chemical bonds, Nanoparticles, Oxidation, silicon},
@@ -1809,7 +1808,7 @@ Another {MTJ} element structure may comprise a pinned layer, a fixed layer and a
 	abstract = {Al/sub 0.4/Ga/sub 0.6/N/{GaN} heterostructure field-effect transistors ({HFETs}) with an {AlGaN} barrier thickness of 8 nm and a gate length (L/sub G/) of 0.06-0.2 μm were fabricated on a sapphire substrate. We employed two novel techniques, which were thin, high-Al-composition {AlGaN} barrier layers and {SiN} gate-insulating, passivation layers formed by catalytic chemical vapor deposition, to enhance high-frequency device characteristics by suppressing the short channel effect. The {HFETs} with L/sub G/=0.06-0.2 μm had a maximum drain current density of 1.17-1.24 A/mm at a gate bias of +1.0 V and a peak extrinsic transconductance of 305-417 {mS}/mm. The current-gain cutoff frequency ({fT}) was 163 {GHz}, which is the highest value to have been reported for {GaN} {HFETs}. The maximum oscillation frequency (fmax) was also high, and its value derived from the maximum stable gain or unilateral gain was 192 or 163 {GHz}, respectively.},
 	number = {1},
 	journal = {{IEEE} Electron Device Letters},
-	author = {Higashiwaki, M. and Matsui, T. and Mimura, T.},
+	author = {Higashiwaki, Masataka and Matsui, Toshiaki and Mimura, Mimura},
 	month = jan,
 	year = {2006},
 	keywords = {0.06 to 0.2 micron, 8 nm, 163 {GHz}, Al/sub 0.4/Ga/sub 0.6/N-{GaN}, Al/sub 2/O/sub 3/, aluminium compounds, Aluminum gallium nitride, barrier layers, catalytic chemical vapor deposition, Catalytic chemical vapor deposition (Cat-{CVD}), {CHEMICAL} {VAPOR} {DEPOSITION}, chemical vapour deposition, current density, current-gain cutoff frequency, Cutoff frequency, diffusion barriers, field effect transistors, gallium compounds, Gallium nitride, {GaN}, gate insulating layers, {HEMTs}, heterostructure field-effect transistor ({HFET}), heterostructure field effect transistors, {III}-V semiconductors, maximum oscillation frequency, {MIS} devices, {MIS}-{HFET}, {MODFETs}, passivation, passivation layers, {SAPPHIRE}, sapphire substrate, short channel effect, Silicon compounds, {SiN}, Transconductance, wide band gap semiconductors},
@@ -1866,7 +1865,7 @@ Another {MTJ} element structure may comprise a pinned layer, a fixed layer and a
 	isbn = {978-3-540-16789-1},
 	url = {http://dx.doi.org/10.1007/BFb0020009},
 	publisher = {Springer-Verlag},
-	author = {Hoover, Wm. G.},
+	author = {Hoover, William G.},
 	year = {1986},
 	file = {mdbook.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/P2X5N7QJ/mdbook.pdf:application/pdf}
 }
@@ -1900,7 +1899,7 @@ Another {MTJ} element structure may comprise a pinned layer, a fixed layer and a
 	number = {8},
 	urldate = {2014-11-24},
 	journal = {Journal of the Mechanics and Physics of Solids},
-	author = {Chasiotis, Ioannis and Knauss, Wolfgang G},
+	author = {Chasiotis, Ioannis and Knauss, Wolfgang G.},
 	month = aug,
 	year = {2003},
 	keywords = {Hydrofluoric acid, Intergranular fracture, Mechanical strength, {MEMS}, Phosphorous doping, Polycrystalline silicon, Transgranular fracture},
@@ -1935,7 +1934,7 @@ Another {MTJ} element structure may comprise a pinned layer, a fixed layer and a
 	number = {19},
 	urldate = {2014-11-24},
 	journal = {Applied Physics Letters},
-	author = {Steudel, Soeren and Vusser, Stijn De and Jonge, Stijn De and Janssen, Dimitri and Verlaak, Stijn and Genoe, Jan and Heremans, Paul},
+	author = {Steudel, Soeren and De Vusser, Stijn and De Jonge, Stijn and Janssen, Dimitri and Verlaak, Stijn and Genoe, Jan and Heremans, Paul},
 	month = nov,
 	year = {2004},
 	keywords = {Carrier mobility, Dielectrics, dielectric thin films, Grain boundaries, Transistors},
