--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -7,10 +7,10 @@
 
 \newif\iftestonly
 \testonlyfalse
-%% \testonlytrue
+\testonlytrue
 
 \documentclass[
-%% draft,
+draft,
 fontsize=11pt,
 a4paper,
 twoside,
@@ -68,7 +68,6 @@ BCOR9mm,
 
 \end{document}
 
-\todoline{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
 \todoline{figures und tables positionieren!}
 \todoline{figures und tables: captions überarbeiten}
 \todoline{Erste Absätze: Keine Einrückung.}
@@ -79,3 +78,4 @@ BCOR9mm,
 \todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
 \todoline{Das wird Arbeit: Alle Referenzen durchgehen und vergleiche, ob ich sie im richtigen Kontext eingebunden habe!}
 \todoline{Wirkt alles immer noch so zusammen gestückelt?}
+\todoline{Tabellen-Hintergründe überschreiben die horizontalen und vertikalen Linien. Das ist ganz große Kacke}
