--- a/md.tex
+++ b/md.tex
@@ -1,7 +1,7 @@
 \section{Molekulardynamik}
 \label{md}
 
-Ursprünglich mit dem Ziel der klassischen Simulation von Gasen und anderen Fluiden entwickelt, wurde die Molekulardynamik\cite{hoover_molecular_1986} seither um die Fähigkeit zur Simulation von Festkörpern, organischen Molekülen und Reaktionen erweitert.
+Ursprünglich mit dem Ziel der klassischen Simulation von Gasen und anderen Fluiden entwickelt, wurde die Molekulardynamik (MD)\cite{hoover_molecular_1986} seither um die Fähigkeit zur Simulation von Festkörpern, organischen Molekülen und Reaktionen erweitert.
 Dadurch findet sie Anwendung in Simulationen von Materialeigenschaften und Molekülen bei beliebigen Temperaturen und Drücken, um deren Verhalten vorhersagen und auf reale Prozesse zurückführen zu können.
 
 Nachfolgend möchte ich einen kurzen Überblick über die Formulierung molekulardynamischer Methoden geben (Abschnitt~\ref{mdformulation}) und im Anschluss auf die Unterschiede und Möglichkeiten der Kraftfelder eingehen (Abschnitt~\ref{mdforcefields}).
