--- a/summary.tex
+++ b/summary.tex
@@ -45,7 +45,7 @@ Anhand der Oberflächenprofile ist Porenbildung als Ursache der Rauheit erkennba
 %% Dabei zeigt sich, dass chemische Reaktionen zwar beschrieben werden, aber mit den untersuchten Kraftfeldern und den genutzten Methoden nicht zuverlässig für Parsivald-Simulationen genutzt werden können.
 %% So sind Reaktionen zwischen Silan und Sauerstoff in der Gasphase nur mit einer begrenzten Menge von Startbedingungen erfolgreich, während sich bei großen Mengen dieser Moleküle Clusterbildung mit unrealistischen Bindungsarten zeigt.
 
-Bei der Simulation von Oberflächen-Reaktionen von Wasser mit Aluminiumoxid mit reaktiven Kraftfeldern kann jedoch eine Hydroxylierung beobachtet werden, die Übereinstimmung mit der Hydroxyl-Bedeckung aus ab initio-Methoden zeigt.
+Bei der Simulation von Oberflächen-Reaktionen von Wasser mit Aluminiumoxid mit reaktiven Kraftfeldern kann eine Hydroxylierung beobachtet werden, die Übereinstimmung mit der Hydroxyl-Bedeckung aus ab initio-Methoden zeigt.
 Allerdings können die benutzten ReaxFF-Parametersätze den zweite Precursor der \ce{Al2O3}-ALD, Trimethylaluminium, mangels passender Parameter für \ce{Al-C}-Bindungen nicht beschreiben, weshalb eine reaktive Abscheidungssimulation dieses ALD-Prozesses mit den vorgestellten Methoden bisher nicht erfolgreich war.
 
 \section{Ausblick}
