--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -1,7 +1,7 @@
 \section{Aluminiumoxid-ALD}
 \label{aluminaald}
 
-Einen Vorzeige-Prozess für Atomlagenabscheidungen bildet die Abscheidung von Aluminiumoxid \ce{Al2O3}, für die häufig das Precursorpaar Trimethylaluminium (TMA, \ce{Al(CH4)3}) und Wasser genutzt wird\cite{puurunen_surface_2005}.
+Einen Vorzeige-Prozess für Atomlagenabscheidungen bildet die Abscheidung von Aluminiumoxid \ce{Al2O3}, für die häufig das Precursorpaar Trimethylaluminium (TMA, \ce{Al(CH3)3}) und Wasser genutzt wird\cite{puurunen_surface_2005}.
 Aufgrund seiner relativ hohen Dielektrizitätskonstanten von $k\approx 8$ ersetzt \ce{Al2O3} langsam gemeinsam mit Materialien wie \ce{HfO2} und \ce{ZrO2}\cite{smith_chemical_2000} das gebräuchliche Siliziumdioxid ($k=3.9$) als Dielektrikum in der Halbleiterindustrie, wird aber auch häufig zur Herstellung passivierender Schichten eingesetzt\cite{yun_passivation_2004,poodt_high-speed_2010}.
 Deshalb soll der TMA-\ce{H2O}-Prozess im Folgenden besonders hinsichtlich der Reaktion der Precursormoleküle mit der Oberfläche untersucht werden.
 
@@ -84,12 +84,34 @@ Damit ist die \pot{liu}-Parametrisierung erfolgreich bei der Darstellung von Kri
 Die Stabilität für Trimethylaluminium (TMA) wurde nach dessen manueller Präparation für die drei Parametersätze \pot{Al\_Al0\_AlN}, \pot{liu\_ettringite} (kurz \pot{liu}) und \pot{narayanan} untersucht (Abbildung~\ref{fig:tmastability}).
 Die Strukturdaten von TMA\cite{haynes_crc_2011} sind in Anhang~\ref{appendix_constants} zusammen gefasst.
 
-Mit den \pot{Al\_Al0\_AlN}-Parametern konnte TMA stabil simuliert werden (Abbildung~\ref{fig:tmamonomer}), jedoch nehmen die simulierten Moleküle keine planare Struktur ein, sondern weisen eine trigonal-pyramidale Struktur mit reduzierten \ce{C-Al-C}-Bindungs\-winkeln von durchschnittlich \SI{103}{\degree} auf.
+Mit den \pot{Al\_Al0\_AlN}-Parametern konnte TMA stabil simuliert werden (Abbildung~\ref{fig:tmamonomer}), jedoch nehmen die simulierten Moleküle nicht die erwartete planare Struktur ein, sondern weisen eine trigonal-pyramidale Struktur mit leicht reduzierten \ce{C-Al-C}-Bindungs\-winkeln von durchschnittlich \SI{103}{\degree} auf.
 Die Bindungslängen stimmen hingegen mit durchschnittlich \SI{2.020}{\angstrom} (Referenz: \SI{1.957}{\angstrom}\cite{haynes_crc_2011}) für \ce{Al-C} und \SI{1.106}{\angstrom} (Referenz: \SI{1.113}{\angstrom}\cite{haynes_crc_2011}) für \ce{C-H} bis auf \SI{3}{\percent} mit Referenzwerten überein.
 Mit dieser Parametrisierung konnte ebenfalls das TMA-Dimer bei niedrigen Temperaturen simuliert werden (Abbildung~\ref{fig:tmadimer}).
 
 \begin{figure}[b!]
   \captionsetup[subfigure]{singlelinecheck=false}
+
+  \hspace{1.5em}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{Al}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{Al}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{C}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{C}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{H}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{H}
+  \end{subfigure}
+
+
   \begin{subfigure}[t]{4cm}
     \includegraphics[width=\textwidth]{tma_Al}
     \subcaption{
@@ -119,10 +141,11 @@ Mit dieser Parametrisierung konnte ebenfalls das TMA-Dimer bei niedrigen Tempera
 
   \caption{Stabilität der TMA-Moleküle für verschiedene \ce{Al2O3}-Parametersätze}
   \label{fig:tmastability}
+  \todoline{Farbkodierung}
 \end{figure}
 
 TMA-Simulationen mit dem \pot{liu}-Parametersatz zeigen hingegen keinen Erfolg, da er keine \ce{Al-C}-Bindungen beschreibt.
-Somit treiben in den Simulationen ungebundene Methylgruppen vom zentralen Aluminium-Atom davon (Abbildung~\ref{fig:tmaliu}).
+Somit lösen sich in den Simulationen ungebundene Methylgruppen vom zentralen Aluminium-Atom (Abbildung~\ref{fig:tmaliu}).
 Die \pot{narayanan}-Parametrisierung verfügt über keine Kohlenstoff-Parameter und kann deshalb nicht für TMA-Simulationen genutzt werden.
 
 Simulationen von Wassermolekülen waren hingegen mit allen Parametrisierungen erfolgreich.
@@ -142,8 +165,37 @@ Das aus Notwendigkeit verwendete Berendsen-Thermostat wirkte nur auf den mittler
 Dabei wird eine chemische Adsorption der Wassermoleküle erwartet\cite{shapovalov_ab_2000}, die zu einer Sättigung der Oberfläche mit Hydroxyl-Gruppen bei einer Bedeckung von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} führen sollte.
 Bei vollständiger chemischer Adsorption aller Wassermoleküle ergäben für die drei präparierten Systeme Hydroxyl-Bedeckungen von jeweils \SI{5.8}{\per\square\nano\meter}, \SI{19.0}{\per\square\nano\meter} und \SI{57.6}{\per\square\nano\meter}.
 
-\begin{figure}
+\begin{figure}[t]
+  \centering
   \captionsetup[subfigure]{singlelinecheck=false}
+
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{Al}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{Al}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{O}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{O}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{H}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{H}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{C}
+  \end{subfigure}
+  \begin{subfigure}[c]{3cm}
+    Hydroxyl-\ce{H}
+  \end{subfigure}
+
+  \vspace{2em}
+
   \def\subfigwidth{0.32\textwidth}
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{alumina_h2o_before}
@@ -168,6 +220,7 @@ Bei vollständiger chemischer Adsorption aller Wassermoleküle ergäben für die
     Das Wasser reagiert mit Sauerstoffatomen an der Oberfläche zu Hydroxylgruppen.
   }
   \label{fig:wateraluminasurface}
+  \todoline{Farbkodierung}
 \end{figure}
 
 Mit den \pot{narayanan}-Parametern konnten keine Adsorptionen beobachtet werden, da sie in den Simulationen durch eine repulsive Kraft zwischen den Wassermolekülen und der Oberfläche verhindert werden.
