--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -1,7 +1,7 @@
 \section{Kupfer-PVD}
 \label{copperpvd}
 
-Anhand der von Kupfer-PVD wurde die Abscheidung eines weiteren fcc-Metalls mit Parsivald simuliert, wofür zuvor verschiedene EAM-Parametersätze untersucht wurden (Tabelle~\ref{tab:copperpots}).
+Anhand von Kupfer-PVD wurde die Abscheidung eines weiteren fcc-Metalls mit Parsivald simuliert, wofür zuvor verschiedene EAM-Parametersätze untersucht wurden (Tabelle~\ref{tab:copperpots}).
 Für diese Parametersätze wird eine kurze Voruntersuchung durchgeführt, bevor mit einer kleinen Auswahl von ihnen Abscheidungsprozesse mit Parsivald simuliert werden.
 
 \begin{table}[bhp]
@@ -75,10 +75,10 @@ Die Referenzwerte stammen aus den Referenzen~\cite{haynes_crc_2011,brillo_densit
 \begin{figure}[H]
   \centering
   \captionsetup[subfigure]{singlelinecheck=false}
-  \begin{subfigure}[c]{10cm}
+  \begin{subfigure}[c]{9.4cm}
     \includegraphics[width=\textwidth]{Cu_u6_meltingpoint}
   \end{subfigure}
-  \begin{subfigure}[c]{4cm}
+  \begin{subfigure}[c]{3cm}
     \includegraphics[width=\textwidth]{Cu_u6_meltingpoint_legend}
     \vspace{1.5em}
   \end{subfigure}
@@ -88,6 +88,7 @@ Die Referenzwerte stammen aus den Referenzen~\cite{haynes_crc_2011,brillo_densit
     Experimentelle Dichte:~\cite{brillo_density_2006}
   }
   \label{fig:copperthermo}
+  \todoline{Schriftgröße zwischen beiden Diagrammen anpassen}
 \end{figure}
 
 \begin{figure}[H]
@@ -199,7 +200,7 @@ Deshalb sind Abscheidungssimulationen auf polykristallinen und amorphen Substrat
 
 \subsection{Untersuchung der maximalen Workerdichte}
 
-Ergänzend ist in Abbildung~\ref{fig:copperworkerdensity-b} ein Histogramm der Zahl paralleler Ereignisse dargestellt, aus der auf die Workerdichte geschlossen werden kann.
+Ergänzend ist in Abbildung~\ref{fig:copperworkerdensity-b} ein Histogramm der Zahl paralleler Ereignisse dargestellt, aus der auf die Workerdichte geschlossen werden kann\todo{hier findet keine Limitierung durch die Zahl der verfügbaren Kerne statt?}.
 Die Verteilung hat ihren Mittelwert bei $p = \num{6.3}$ mit dem Maximum von aktiven Prozessen bei $p_\text{peak} = \num{13}$, wobei der Hauptprozess bereits zu $p$ gezählt wurde.
 Dem steht eine analytisch ermittelte maximale Zahl von Prozessen mit $p_\text{max} = \num{30}$ gegenüber, die allerdings eine dichte Packung von MD-Boxen auf der Oberfläche voraus setzt.
 Durch die zufällige Auswahl der Ereignisorte und der Bewahrung der Reihenfolge der Ereignisse ergeben sich in Parsivald-Simulationen vergleichsweise effiziente Workerdichten von $\rho_\text{worker} = \SI{18.5}{\percent}$.
