--- a/multilayer.tex
+++ b/multilayer.tex
@@ -9,9 +9,11 @@ In MD-Simulationen von \textsc{Zhou et al.}\cite{zhou_atomistic_1998} wurden ber
 In dieser und weiteren Untersuchungen\cite{zhou_atomic_2001} wurden erfolgreich EAM-Potentiale benutzt, um dünne Multilagen-Systeme zu simulieren.
 Dabei bildeten sich in der Simulation klar abgetrennte Lagen aus, die nur bei hoher Energie des auftreffenden Teilchens zu einer Durchmischung des Systemes führen\cite{zhou_atomistic_1998}.
 
-Experimentelle Untersuchungen von \ce{Cu-Ni}-Multilagen zeigen für Sputter-Prozesse Doppel\-lagen-Dicken von \SIrange{1.6}{12}{\nano\meter}\cite{cammarata_nanoindentation_1990} und \SI{160}{\nano\meter} für Elektrodepositions-Prozesse\cite{yang_pulsed_1995}.
+\todoline{irreführend geschrieben. Letztlich kommen diese Dicken ja von den jeweiligen technologischen Erfordernissen und den Abscheideeinstellungen - das ist ja keine Größe die den Strukturen fundamental eigen ist}
+
+In experimentellen Untersuchungen von \ce{Cu-Ni}-Multilagen wurden für Sputter-Prozesse Dop\-pel\-lagen-Dicken von \SIrange{1.6}{12}{\nano\meter}\cite{cammarata_nanoindentation_1990} und \SI{160}{\nano\meter} für Elektrodepositions-Prozesse\cite{yang_pulsed_1995} verwendet.
 Eine Untersuchung der Oberfläche für gesputterte Schichten mit einer Dicke von \SI{1.5}{\micro\meter} bei Doppellagen-Dicken von \SIrange{51}{117}{\angstrom} ergab Unebenheiten an der Oberfläche mit einer Tiefe von \SIrange{30}{40}{\nano\meter}\cite{barshilia_characterization_2002}.
-Damit sind die experimentellen Lagen häufig dicker als die mit Parsivald simulierten Doppellagen-Dicken von \SI{2}{\nano\meter}, allerdings beschränken sich die Untersuchungen häufig auf mechanische, magnetische oder elektronische Eigenschaften, sodass kein direkter Vergleich mit strukturellen Daten möglich ist.
+Damit sind die experimentellen Lagen häufig dicker als die mit Parsivald simulierten Doppel\-lagen-Dicken von \SI{2}{\nano\meter}, allerdings beschränken sich die Untersuchungen auf mechanische, magnetische oder elektronische Eigenschaften, sodass ohnehin kein direkter Vergleich mit strukturellen Daten möglich ist.
 Da dickere Lagen zudem mit einer Rechenzeit von mehreren Wochen einher gehen, waren sie aufgrund der Notwendigkeit mehrerer Anpassungszyklen der Abscheidungssimulation im zeitlichen Rahmen dieser Arbeit nicht durchführbar.
 Stattdessen werden die Ergebnisse mit denen anderer MD-Rechnungen verglichen.
 Sofern die MD-Rechnungen mit dem benutzten EAM-Parametersatz das Zielsystem hinreichend beschreiben und eine Übereinstimmung mit der Parsivald-Simulation vorliegt, sollten auch größere Systeme effizient simuliert werden können.
@@ -61,7 +63,7 @@ Für Systeme, die zu einer stärkeren Durchmischung neigen, sollten längere Rel
 Zur Erzeugung von Vergleichsstrukturen wurden reine MD-Simulationen mit LAMMPS durchgeführt, welches auch von Parsivald für MD-Rechnungen als Laufzeit-Bibliothek eingebunden wird.
 Dabei wurde die Größe des Substrates beibehalten und während der Simulation Atome vom oberen Rand des Simulationsraumes auf die Oberfläche aufgebracht, wofür die PVD-Raten zugunsten der Rechenzeit um mehrere Größenordnungen höher als bei Parsivald-Rechnungen gewählt werden mussten.
 Dadurch sind gegenseitige Einflüsse zwischen benachbarten Abscheidungsorten nicht ausgeschlossen und können die Filmqualität durch Bildung von Nanopartikeln potentiell verringern.
-Im Gegensatz zu Parsivald wird bei den reinen LAMMPS-Rechnungen der komplette Simulationsraum simultan berechnet, wodurch auch langreichweitige Effekte ermöglicht werden.
+Im Gegensatz zu Parsivald wird bei den reinen LAMMPS-Rechnungen der komplette Simulationsraum simultan berechnet, wodurch auch langreichweitige Effekte berücksichtigt werden.
 
 Beim Vergleich der Ergebnisse von Parsivald und LAMMPS zeigt sich jedoch eine gute Übereinstimmung der Schichten (Abbildung~\ref{fig:multilayerresults}), die auch in den Rauheiten erkennbar ist (Abbildung~\ref{fig:multilayerplots-a}).
 Sowohl die Ergebnisse der Abscheidungssimulationen mit Parsivald als auch die der LAMMPS-Rechnungen weisen Rauheiten unterhalb der Bindungslängen auf und zeigen weder Hohlräume noch Gitterdefekte.
@@ -69,6 +71,21 @@ Bei den LAMMPS-Simulationen wurde versehentlich eine leicht geringere Zahl von A
 
 \begin{figure}[tp]
   \captionsetup[subfigure]{singlelinecheck=false}
+
+  \hspace{1.5em}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{Cu}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{Cu}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \includegraphics[width=\textwidth]{Ni}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.7cm}
+    \ce{Ni}
+  \end{subfigure}
+
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{CuNi_LAMMPS_45}
@@ -79,8 +96,10 @@ Bei den LAMMPS-Simulationen wurde versehentlich eine leicht geringere Zahl von A
     \includegraphics[width=\textwidth]{CuNi_23abit_57_profile}
     \subcaption{Profil von \ce{Cu-Ni}-Multilagen mit Parsivald}
   \end{subfigure}
+
   \caption{Vergleich von Multilagen-Profilen mit LAMMPS und Parsivald}
   \label{fig:multilayerresults}
+  \todoline{Farbcode: Was ist was?}
 \end{figure}
 
 \subsection{Vergleich der Parallelisierbarkeit}
